@@ -1,13 +1,17 @@
 package com.meshwarcoders.catalyst.api.service;
 
-import com.meshwarcoders.catalyst.api.dto.CreateExamRequest;
-import com.meshwarcoders.catalyst.api.dto.ExamQuestionRequest;
-import com.meshwarcoders.catalyst.api.dto.ExamSummaryDto;
+import java.util.Map;
+
+import com.meshwarcoders.catalyst.api.dto.request.AnswerRequest;
+import com.meshwarcoders.catalyst.api.dto.request.CreateExamRequest;
+import com.meshwarcoders.catalyst.api.dto.request.ExamQuestionRequest;
+import com.meshwarcoders.catalyst.api.dto.response.ExamDetailsDto;
+import com.meshwarcoders.catalyst.api.dto.response.ExamSummaryDto;
+import com.meshwarcoders.catalyst.api.dto.response.QuestionDto;
 import com.meshwarcoders.catalyst.api.exception.NotFoundException;
 import com.meshwarcoders.catalyst.api.exception.UnauthorizedException;
 import com.meshwarcoders.catalyst.api.model.*;
 import com.meshwarcoders.catalyst.api.model.common.EnrollmentStatus;
-import com.meshwarcoders.catalyst.api.model.common.NotificationType;
 import com.meshwarcoders.catalyst.api.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -39,6 +43,12 @@ public class ExamService {
     private StudentRepository studentRepository;
 
     @Autowired
+    private StudentExamRepository studentExamRepository;
+
+    @Autowired
+    private StudentAnswerRepository studentAnswerRepository;
+
+    @Autowired
     private NotificationService notificationService;
 
     @Transactional
@@ -52,52 +62,50 @@ public class ExamService {
 
         ExamModel exam = new ExamModel();
         exam.setLesson(lesson);
-        exam.setExamName(request.getExamName());
-        exam.setMaxGrade(request.getMaxGrade());
+        exam.setExamName(request.examName());
+        exam.setMaxGrade(request.maxGrade());
+        exam.setExamType(request.examType());
 
-        if (request.getExamDateTime() != null && !request.getExamDateTime().isBlank()) {
-            exam.setExamDateTime(LocalDateTime.parse(request.getExamDateTime()));
+        Integer defaultPoints = request.defaultPoints();
+        ;
+
+        if (request.examDateTime() != null && !request.examDateTime().isBlank()) {
+            exam.setExamDateTime(LocalDateTime.parse(request.examDateTime()));
         }
-        exam.setDurationMinutes(request.getDurationMinutes());
+        if (request.closingDate() != null && !request.closingDate().isBlank()) {
+            exam.setClosingDate(LocalDateTime.parse(request.closingDate()));
+        }
+        exam.setDurationMinutes(request.durationMinutes());
 
         exam = examRepository.save(exam);
 
-        if (request.getQuestions() != null) {
-            for (ExamQuestionRequest q : request.getQuestions()) {
+        if (request.questions() != null) {
+            for (ExamQuestionRequest q : request.questions()) {
                 ExamQuestionModel qm = new ExamQuestionModel();
                 qm.setExam(exam);
-                qm.setText(q.getText());
-                qm.setType(q.getType());
-                qm.setOptions(q.getOptions());
-                qm.setCorrectOptionIndex(q.getCorrectOptionIndex());
-                qm.setMaxPoints(q.getMaxPoints());
+                qm.setText(q.text());
+                qm.setType(q.type());
+                qm.setOptions(q.options());
+                qm.setCorrectOptionIndex(q.correctOptionIndex());
+                qm.setMaxPoints(q.maxPoints() == null ? defaultPoints : q.maxPoints());
                 examQuestionRepository.save(qm);
             }
         }
 
-        // Notify all approved students in this lesson about the new exam
-        List<StudentLessonModel> approvedStudents = studentLessonRepository
-                .findByLessonAndStatus(lesson, EnrollmentStatus.APPROVED);
+        // Notify Students
+        List<StudentModel> students = studentLessonRepository.findByLessonAndStatus(lesson, EnrollmentStatus.APPROVED)
+                .stream()
+                .map(StudentLessonModel::getStudent)
+                .toList();
 
-        String dateTimeString = exam.getExamDateTime() != null ? exam.getExamDateTime().toString() : null;
-        for (StudentLessonModel sl : approvedStudents) {
-            StudentModel student = sl.getStudent();
-            java.util.Map<String, Object> payload = java.util.Map.of(
-                    "lessonId", lesson.getId(),
-                    "lessonSubject", lesson.getSubject(),
-                    "examId", exam.getId(),
-                    "examName", exam.getExamName(),
-                    "examDateTime", dateTimeString
-            );
-
-            notificationService.sendNotification(
-                    student.getEmail(),
-                    NotificationType.EXAM_CREATED,
-                    "New exam created",
-                    "A new exam has been scheduled for your class.",
-                    payload
-            );
-        }
+        notificationService.notifyStudents(
+                students,
+                "New Exam Added",
+                "A new exam '" + exam.getExamName() + "' has been added to " + lesson.getSubject(),
+                Map.of(
+                        "type", "NEW_EXAM",
+                        "lessonId", lesson.getId().toString(),
+                        "examId", exam.getId().toString()));
 
         return toSummaryDto(exam);
     }
@@ -111,10 +119,9 @@ public class ExamService {
             throw new UnauthorizedException("You do not own this lesson!");
         }
 
-        return examRepository.findByLesson(lesson)
+        return lesson.getExams()
                 .stream()
-                .map(this::toSummaryDto)
-                .collect(Collectors.toList());
+                .map(this::toSummaryDto).toList();
     }
 
     @Transactional(readOnly = true)
@@ -138,8 +145,51 @@ public class ExamService {
                 .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
+    public ExamDetailsDto getExamById(Long examId, String email, boolean isTeacher) {
+        ExamModel exam = examRepository.findById(examId)
+                .orElseThrow(() -> new NotFoundException("Exam not found!"));
+
+        if (isTeacher) {
+            TeacherModel teacher = teacherRepository.findByEmail(email)
+                    .orElseThrow(() -> new NotFoundException("Teacher not found!"));
+            if (!exam.getLesson().getTeacher().getId().equals(teacher.getId())) {
+                throw new UnauthorizedException("You do not own this lesson!");
+            }
+        } else {
+            StudentModel student = studentRepository.findByEmail(email)
+                    .orElseThrow(() -> new NotFoundException("Student not found!"));
+            StudentLessonModel sl = studentLessonRepository.findByLessonAndStudent(exam.getLesson(), student)
+                    .orElseThrow(() -> new UnauthorizedException("You are not enrolled in this lesson!"));
+            if (sl.getStatus() != EnrollmentStatus.APPROVED) {
+                throw new UnauthorizedException("You are not approved in this lesson!");
+            }
+        }
+
+        List<QuestionDto> questions = exam.getQuestions().stream()
+                .map(q -> new QuestionDto(
+                        q.getId(),
+                        q.getText(),
+                        q.getType(),
+                        q.getOptions(),
+                        q.getMaxPoints()))
+                .toList();
+
+        return new ExamDetailsDto(
+                exam.getId(),
+                exam.getLesson().getId(),
+                exam.getExamName(),
+                exam.getMaxGrade(),
+                exam.getExamDateTime() != null ? exam.getExamDateTime().toString() : null,
+                exam.getClosingDate() != null ? exam.getClosingDate().toString() : null,
+                exam.getDurationMinutes(),
+                exam.getExamType(),
+                questions);
+    }
+
     private ExamSummaryDto toSummaryDto(ExamModel exam) {
         String dateTimeString = exam.getExamDateTime() != null ? exam.getExamDateTime().toString() : null;
+        String closingDateString = exam.getClosingDate() != null ? exam.getClosingDate().toString() : null;
 
         return new ExamSummaryDto(
                 exam.getId(),
@@ -147,7 +197,61 @@ public class ExamService {
                 exam.getExamName(),
                 exam.getMaxGrade(),
                 dateTimeString,
-                exam.getDurationMinutes()
-        );
+                closingDateString,
+                exam.getDurationMinutes(),
+                exam.getExamType());
+    }
+
+    @Transactional
+    public void submitExam(String studentEmail, Long examId, List<AnswerRequest> answerRequests) {
+        StudentModel student = studentRepository.findByEmail(studentEmail)
+                .orElseThrow(() -> new NotFoundException("Student not found!"));
+
+        ExamModel exam = examRepository.findById(examId)
+                .orElseThrow(() -> new NotFoundException("Exam not found!"));
+
+        // Validate enrollment
+        StudentLessonModel sl = studentLessonRepository.findByLessonAndStudent(exam.getLesson(), student)
+                .orElseThrow(() -> new UnauthorizedException("You are not enrolled in this lesson!"));
+
+        if (sl.getStatus() != EnrollmentStatus.APPROVED) {
+            throw new UnauthorizedException("You are not approved in this lesson!");
+        }
+
+        // Check closing date
+        if (exam.getClosingDate() != null && LocalDateTime.now().isAfter(exam.getClosingDate())) {
+            throw new UnauthorizedException("The deadline for this exam has passed!");
+        }
+
+        // Check if already submitted
+        if (studentExamRepository.findByStudentAndExam(student, exam).isPresent()) {
+            throw new UnauthorizedException("You have already submitted this exam!");
+        }
+
+        StudentExamModel studentExam = new StudentExamModel();
+        studentExam.setStudent(student);
+        studentExam.setExam(exam);
+        studentExam.setGrade(null); // No auto-grading as requested
+        studentExamRepository.save(studentExam);
+
+        List<StudentAnswerModel> answers = answerRequests.stream()
+                .map(a -> {
+                    ExamQuestionModel question = examQuestionRepository.findById(a.questionId())
+                            .orElseThrow(() -> new NotFoundException("Question not found: " + a.questionId()));
+
+                    if (!question.getExam().getId().equals(exam.getId())) {
+                        throw new UnauthorizedException("Question does not belong to this exam!");
+                    }
+
+                    StudentAnswerModel answer = new StudentAnswerModel();
+                    answer.setStudentExam(studentExam);
+                    answer.setQuestion(question);
+                    answer.setSelectedOptions(a.selectedOptions());
+                    answer.setTextAnswer(a.textAnswer());
+                    return answer;
+                })
+                .toList();
+
+        studentAnswerRepository.saveAll(answers);
     }
 }
